k8s-app/coherence-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coherence-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coherence-app
  template:
    metadata:
      labels:
        app: coherence-app
    spec:
      containers:
        - name: coherence
          image: ghcr.io/techcrumbs/coherence-hello-world:0.2-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 7574 # default Coherence port
