k8s-app/coherence-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coherence-headless-service
spec:
  clusterIP: None
  selector:
    app: coherence-app
  ports:
    - port: 7574
