k8s-app/coherence-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coherence-service
spec:
  clusterIP: None
  selector:
    app: coherence-app
  ports:
    - port: 7574
