k8s-app/micronaut-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micronaut-service
spec:
  selector:
    app: coherence-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP  # Or LoadBalancer / NodePort / Ingress
